fix: built-in forms fixes
- fixed logon audit details page
- added new permissions for audit items
- updated sidebar menu

--- a/shesha-core/src/Shesha.Core/Localization/SourceFiles/Shesha.xml
+++ b/shesha-core/src/Shesha.Core/Localization/SourceFiles/Shesha.xml
@@ -121,5 +121,10 @@
 
     <text name="Validation.CorrectErrorsAndTryAgain">Please correct the errors and try again</text>
     <text name="Validation.SomethingWentWrong">Something went wrong</text>
+      
+    <text name="LogonAudit">Logon Audit</text>
+    <text name="OtpAudit">OTP Audit</text>
+    <text name="NotificationsAudit">Notifications Audit</text>
+    <text name="DataAudit">Data Audit</text>
   </texts>
 </localizationDictionary>
